--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
     <string name="shownotes_contentdescription">swipe up to read shownotes</string>
     <string name="close_label">Close</string>
     <string name="retry_label">Retry</string>
-    <string name="auto_download_label">Include in auto downloads</string>
+    <string name="auto_download_label">Automatically download new Episodes</string>
     <string name="feed_volume_adapdation">Volume adaptation</string>
     <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
     <string name="feed_volume_reduction_off">No adaption</string>
